--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "tslint.configFile": "tslint.json",
+  "[typescript]": {
+    "editor.formatOnSave": true
+  }
 }
