--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "prettier": "^2.0.5",
+    "raw-loader": "^4.0.1",
     "ts-loader": "^7.0.3",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
@@ -18,6 +19,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/gl-matrix": "^2.4.5",
+    "gl-matrix": "^3.3.0",
     "three": "^0.116.1"
   },
   "private": true,
