--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
       "ES2020",
       "DOM"
     ],
+    "typeRoots": [
+      "node_modules/@types",
+      "./src/types"
+    ],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
