--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^3.8.3",
+    "webgl-obj-loader": "^2.0.8",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
