char rendering has been implemented
最初の2文字だけフォントが適用されない問題が発生しているため、要対策。
https://i.gyazo.com/9bcf03298b40f761a9790e34d0f738c5.png

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Kuyuri Iroha",
   "license": "MIT",
   "devDependencies": {
+    "@types/createjs": "^0.0.29",
+    "@types/webfontloader": "^1.6.30",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "ts-loader": "^7.0.3",
@@ -22,7 +24,7 @@
   "dependencies": {
     "@types/gl-matrix": "^2.4.5",
     "gl-matrix": "^3.3.0",
-    "three": "^0.116.1"
+    "webfontloader": "^1.6.28"
   },
   "private": true,
   "scripts": {
